# notebook-crewai-agent

./: README.md  main.py  pyproject.toml
modules/: notebook_controller.py  notebook_tools_crewai.py  notebook_tools_langchain.py
